updated pricing UI

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -563,7 +563,7 @@
 <kr-modal modalType="default" #externalResponsePop modalClass="modal_popups_">
   <div class="modal-header">
     <div class="title">External</div>
-    <div class="close_icon"><img class="ng-tns-c11-2" (click)="closeExternalPopUpRef()" src="assets/icons/modal-close.svg"></div>
+    <div class="close_icon"><img  (click)="closeExternalPopUpRef()" src="assets/icons/modal-close.svg"></div>
   </div>
 <perfect-scrollbar class="perfect-scroll-modal-body">
   <div class="modal-body textAlignLeft">
