--- a/findly-builder/src/app/components/attributes-list/attributes-list.component.html
+++ b/findly-builder/src/app/components/attributes-list/attributes-list.component.html
@@ -69,7 +69,7 @@
     <div class="modal-header">
         <div class="title" *ngIf="isAdd">Add Fields</div>
         <div class="title" *ngIf="isEdit">Edit Fields</div>
-        <div class="close_icon"><img class="ng-tns-c11-2" src="assets/icons/modal-close.svg" (click)='closeAddAttributesModal()'></div>
+        <div class="close_icon"><img  src="assets/icons/modal-close.svg" (click)='closeAddAttributesModal()'></div>
       </div>
       <perfect-scrollbar class="perfect-scroll-modal-body">
         <div class="modal-body">
