--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -740,7 +740,7 @@
     <ng-container  *ngIf="selectedFaq && selectedFaq.isAddFollow">
         <div class="modal-header">
           <div class="title">Add Follow Up FAQ</div>
-          <div class="close_icon"><img class="ng-tns-c11-2" (click)="cancleAddFollowUp()" src="assets/icons/modal-close.svg"></div>
+          <div class="close_icon"><img  (click)="cancleAddFollowUp()" src="assets/icons/modal-close.svg"></div>
         </div>
       <perfect-scrollbar class="app-add-faq-insidescroll">
         <div class="modal-body">
@@ -759,7 +759,7 @@
     <ng-container  *ngIf="editfaq && selectedFaq">
   <div class="modal-header">
     <div class="title">Edit FAQ</div>
-    <div class="close_icon"><img class="ng-tns-c11-2" (click)="faqCancle()" src="assets/icons/modal-close.svg"></div>
+    <div class="close_icon"><img  (click)="faqCancle()" src="assets/icons/modal-close.svg"></div>
   </div>
 <perfect-scrollbar class="perfect-scroll-modal-body">
   <div class="modal-body">
