--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -162,7 +162,7 @@
       </div>
     </label>
         <div class="close_icon" (click)="closeModalPopup()">
-            <img class="ng-tns-c11-2" src="assets/icons/modal-close.svg" />
+            <img  src="assets/icons/modal-close.svg" />
         </div>
     </div>
 
