updated faq styles

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -279,7 +279,7 @@
                                                       <span class="mat-val" *ngIf="value">{{value}}</span>
                                                       <mat-icon matChipRemove><img src="assets/images/close.svg" /></mat-icon>
                                                   </mat-chip>
-                                                  <span>OR</span>
+                                                  <span class="and">OR</span>
                                               </ng-container>
                                           </ng-container>
                                           <ng-container *ngIf="ruleObj.value && ruleObj.value.length && (ruleObj.dataType === 'number')">
