--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -15,8 +15,8 @@
                   <div class="dropdown dropdown-open">
                       <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img src="assets/icons/pricing/overflow.svg"></button>                                            
                       <ul class="dropdown-menu content-menu">                                                                    
-                        <li><a>Add Overage</a></li>
-                        <li><a>Change Plan</a></li>
+                        <li (click)="openPopup4()"><a>Add Overage</a></li>
+                        <li (click)="openPopup3()"><a>Change Plan</a></li>
                         <li><a>Cancel Subscription</a></li>
                       </ul>
                     </div>
@@ -149,7 +149,21 @@
                 <div class="plan-type">Standard Subscription</div>
                 <div class="btn-monthly active-btn">Monthly</div>
                 <div class="btn-monthly">Annually</div>
+              </div>            
+
+              <div class="amount col-3">$ 99</div>
+            </div>
+            <div class="order-confirmation-table-body row col-12 m-0">             
+              <div class="col-9 plan_details">
+                <div class="plan-type">Document Overage</div>
+                <div class="add-doc-btn-sec">
+                  <div class="minus"><img src="assets/icons/pricing/minus-small.svg"></div>
+                  <div class="increase-num">1</div>
+                  <div class="plus"><img src="assets/icons/pricing/plus-small.svg"></div>
+                </div>
+                <div class="amount-increased">10 k</div>
               </div>
+
               <div class="amount col-3">$ 99</div>
             </div>
             <div class="order-confirmation-table-body row col-12 m-0">
@@ -165,36 +179,145 @@
       </div>
 </kr-modal>
 <!--popup2-->
-<kr-modal modalType="center" modalClass="modal_popups_" #addPricingModel2>
+<kr-modal modalType="center" modalClass="modal_popups_ payment-confirmation-price" #addPricingModel2>
     <div class="modal-header">
-      <div class="title">Pricing2</div>
-      <div class="close_icon"><img  (click)="closePopup2()"
-          src="assets/icons/modal-close.svg"></div>
+      <div class="title">Payment Confirmation</div>
+      <div class="close_icon">
+        <img (click)="closePopup2()"src="assets/icons/modal-close.svg">
+      </div>
     </div>
     <perfect-scrollbar class="addSourceModalBody addNewSource">
       <div class="modal-body">
-        popup2 opned
+        
       </div>
     </perfect-scrollbar>
-    <div class="modal-footer">
-      <button class="kr-sg-button-primary btn_lg mr-3">Proceed</button>
-      <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePopup2()">Cancel</button>
+    <div class="modal-footer text-right">
+      <button class="kr-sg-button-primary btn_lg" (click)="closePopup2()">Done</button>     
     </div>
 </kr-modal>
 <!--popup3-->
-<kr-modal modalType="center" modalClass="modal_popups_" #addPricingModel3>
+
+<kr-modal modalType="center" modalClass="modal_popups_ chooseplan-price" #addPricingModel3>
     <div class="modal-header">
-      <div class="title">Pricing3</div>
-      <div class="close_icon"><img  (click)="closePopup3()"
-          src="assets/icons/modal-close.svg"></div>
+      <div class="title">Choose Plan</div>
+      <div class="d-flex align-items-center justify-content-end">
+        <div class="btn-monthly active-btn">Monthly</div>
+        <div class="btn-monthly">Annually</div>
+        <div class="close_icon ml-4">
+          <img  (click)="closePopup3()" src="assets/icons/modal-close.svg">
+        </div>
+      </div>      
     </div>
     <perfect-scrollbar class="addSourceModalBody addNewSource">
       <div class="modal-body">
-        popup3 opned
+        <div class="upgrade-details-prices row col-12 p-0">          
+          <div class="col-4 upgrade-price-card current-plan">
+            <div class="inner-content">
+              <img src="assets/icons/pricing/standard.svg" class="standard-img">
+                <div class="title-sec">
+                  <div class="title">Standard</div>
+                  <div class="price d-none">$99 <span>/ month</span></div>
+                  <div class="current-plan-title"><img src="assets/icons/pricing/check-round.svg">Current Plan</div>
+                </div>
+                <div class="card-desc">10k Documents </div>
+                <div class="card-desc">50k Queries per month</div>
+                <div class="card-desc">Scheduled Crawling</div>
+                <div class="card-desc">Experiments</div>
+                <div class="card-desc">Community Support</div>
+                <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
+            </div>
+          </div>
+
+          <div class="col-4 upgrade-price-card">
+            <div class="inner-content">
+              <img src="assets/icons/pricing/pro.svg" class="pro-img">
+                <div class="title-sec">
+                  <div class="title">Pro</div>
+                  <div class="price">$399 <span>/ month</span></div>
+                </div>
+                <div class="card-desc">50k Documents  </div>
+                <div class="card-desc">100k Queries per month</div>
+                <div class="card-desc">Connectors & Unstructured content</div>
+                <div class="card-desc">Multiple indices</div>
+                <div class="card-desc">E-mail Support</div>
+                <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
+            </div>
+          </div>
+
+          <div class="col-4 upgrade-price-card custom_">
+            <div class="inner-content">
+              <img src="assets/icons/pricing/enterprise.svg" class="enterprise-img">
+              <div class="title-sec">
+                <div class="title">Enterprise</div>
+                <div class="custom-title">Custom</div>
+              </div>
+              <div class="card-desc">Any no. of documents </div>
+              <div class="card-desc">Any no. of documents</div>
+              <div class="card-desc">Custom SLAs</div>
+              <div class="custom-desc-text">Fully Customizable & Tailored Solution for your business needs</div>
+              <button class="kr-sg-button-secondary btn_lg">Contact US</button>
+            </div>
+          </div>
+        </div>
       </div>
     </perfect-scrollbar>
-    <div class="modal-footer">
+    <div class="modal-footer text-right">
       <button class="kr-sg-button-primary btn_lg mr-3">Proceed</button>
       <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePopup3()">Cancel</button>
     </div>
+</kr-modal>
+
+<kr-modal modalType="center" modalClass="modal_popups_ overage_plan" #addPricingModel4>
+  <div class="modal-header">
+    <div class="title">Overage Plan</div>
+    <div class="close_icon">
+      <img  (click)="closePopup4()" src="assets/icons/modal-close.svg">
+    </div>     
+  </div>
+  <perfect-scrollbar>
+    <div class="modal-body">
+      <div class="mian-title-desc">The document/query is reaching maximum limit for your current plan. No worries, We got you covered!!</div>
+      
+      
+      <div class="col-12 p-0 mian-title">Add Overage</div>
+      <div class="add_overage_data">        
+        <div class="overage_card">
+          <div class="titles-sec">
+            <div class="title">Documents</div>
+            <div class="price">$25 <span>/ month</span></div>
+          </div>
+          <div class="info-card-overage">Add <span>Additional 10k</span> documents to your plan</div>
+          <div class="btn_add_doc text-right">
+            <button class="kr-sg-button-secondary btn_lg d-none">Add Documents </button>
+            <div class="add-doc-block">
+              <div class="minus-btn"><img src="assets/icons/pricing/minus.svg"></div>
+              <div class="number-doc">1</div>
+              <div class="plus-btn"><img src="assets/icons/pricing/plus.svg"></div>
+            </div>
+          </div>
+        </div>
+        <div class="overage_card">
+          <div class="titles-sec">
+            <div class="title">Queries</div>
+            <div class="price">$99 <span>/ month</span></div>
+          </div>
+          <div class="info-card-overage">Add <span>Additional 50k</span> queries to your plan</div>
+          <div class="btn_add_doc text-right">
+            <button class="kr-sg-button-secondary btn_lg">Add Queries</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="change-plan-container">
+        <button class="kr-sg-button-secondary btn_lg">Change Plan</button>
+        <div class="info-text">You can also choose to <span>Upgrade your Plan</span> </div>
+        <div class="info-text">Upgrade to <u>Pro</u> to get <span>50k documents</span> and <span>100k Queries</span> per month.</div>
+        <div class="info-text">Upgrade to <u>Enterprise</u> to get <span>custom</span> no. of documents and queries per month.  </div>
+      </div>
+    </div>
+  </perfect-scrollbar>
+  <div class="modal-footer text-right">
+    <button class="kr-sg-button-primary btn_lg mr-3">Proceed</button>
+    <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="closePopup4()">Cancel</button>
+  </div>
 </kr-modal>
