--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
@@ -112,7 +112,7 @@
           <div id="collapse4" class="collapse">
             <div class="card-body">
                 <div class="guide-inner-info">SearchAssist allows you to customize the search experience and design the search interface based on the business context. </div>
-                <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/searchInterface')">Start Designing</button>
+                <button class="kr-sg-button-primary btn_lg mr-3" (click)="gotoRoutes('/search-experience')">Start Designing</button>
                 <button class="kr-sg-button-secondary btn_lg ml-1">Learn More</button>
             </div>
           </div>
