--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -2841,7 +2841,7 @@ and open the template in the editor.
         .dropdown-toggle{
             margin: 0;
             padding: 0;            
-            cursor: pointer;
+            // cursor: pointer;
             height: 100%;
             &::after{
                 border: 0;
