--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
@@ -180,6 +180,7 @@
                 .left-sec{
                     display: flex;
                     align-items: center;
+                    cursor: default;
                     img{
                         margin-right: 10px;
                     }
